--- a/BulkyBookWeb/appsettings.json
+++ b/BulkyBookWeb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server:DESKTOP-Q63EDBL; Database=Bulky;Trusted_Connection:True;"
+    "DefaultConnection": "Server=DESKTOP-Q63EDBL; Database=Bulky;Trusted_Connection=True;"
   }
 }
